--- a/src/index.html
+++ b/src/index.html
@@ -13,6 +13,7 @@
             <h2 style="margin: 5px">Minha Lista de Afazeres</h2>
             <input type="text" id="myInput" placeholder="Atividade..." />
             <span onclick="newElement()" class="addBtn">Adicionar</span>
+            <span onclick="saveEdits()" class="addBtn">Salvar</span>
         </div>
 
         <ul id="myUL">
